fix whitespace

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -4,7 +4,8 @@ $white-transparent-6: rgba(255, 255, 255, 0.6)
 $white-transparent-7: rgba(255, 255, 255, 0.7)
 
 html, body
-    height: 100%
+    height: 100vh
+    padding-top: 4vh
 
 /** custom navbar CSS **/
 a
@@ -13,7 +14,6 @@ a
 
 #nav-logo
     height: 1.5em
-    
 
 .bg-alumni
     background-color: $primary-color
@@ -37,17 +37,14 @@ a
     background-position: center
     background-repeat: no-repeat
     background-size: cover
-    padding-top: 15vh
+    padding-top: 25vh
 
 h1
     color: $white-transparent-7
     padding-bottom: 1.5vh
-    font-size: 4vw
 
 .img-responsive
     display: inline-block
-    
-#hero-container
-    margin-top: 8vh
+
 
     
